disks: Properly initialize read/write counters

These are used to calculate the read/write rate. If they are left
uninitialised, the first update of those rates will be a bogus value.

BUG: 448494


(cherry picked from commit 75dad23ba525647bd3f3acf6a2c71e9a84b552de)